[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/04b03.tres" type="DynamicFont" id=1]
[ext_resource path="res://sounds/music/music1.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://hp_bar.tres" type="Theme" id=4]
[ext_resource path="res://sounds/player/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/player/rec_hp.wav" type="AudioStream" id=6]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=7]
[ext_resource path="res://Scripts/GunController.gd" type="Script" id=8]
[ext_resource path="res://sprites/items/1gun.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Hotbar.gd" type="Script" id=10]

[sub_resource type="CapsuleShape" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.835294, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0.447059, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.0823529, 0.0823529, 0.498039 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.466667, 0.0313726, 0.0313726, 1 )

[node name="Player" type="KinematicBody"]
collision_mask = 6
script = ExtResource( 3 )

[node name="GunController" type="Node" parent="."]
script = ExtResource( 8 )
label_path = NodePath("../VBoxContainer/gun_name_label")

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
current = true
script = ExtResource( 7 )

[node name="rec_dmg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -14.0
autoplay = true

[node name="rec_hp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -48.0
margin_right = 255.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_bar" type="ProgressBar" parent="VBoxContainer"]
margin_right = 247.0
margin_bottom = 20.0
theme = ExtResource( 4 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
max_value = 20.0
value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_name_label" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 247.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "gun name here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
alignment = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PET" type="TextureRect" parent="Hotbar"]
margin_top = 20.0
margin_right = 50.0
margin_bottom = 70.0
rect_min_size = Vector2( 40, 0 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 5
texture = ExtResource( 9 )
stretch_mode = 6

[node name="PVC" type="TextureRect" parent="Hotbar"]
margin_top = 74.0
margin_right = 50.0
margin_bottom = 124.0
rect_min_size = Vector2( 40, 0 )
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Hotbar"]
margin_top = 128.0
margin_right = 50.0
margin_bottom = 178.0
rect_min_size = Vector2( 40, 0 )
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Hotbar"]
margin_top = 182.0
margin_right = 50.0
margin_bottom = 232.0
rect_min_size = Vector2( 40, 0 )
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Hotbar"]
margin_top = 236.0
margin_right = 50.0
margin_bottom = 286.0
rect_min_size = Vector2( 40, 0 )
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Hotbar"]
margin_top = 290.0
margin_right = 50.0
margin_bottom = 340.0
rect_min_size = Vector2( 40, 0 )
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Hotbar"]

[connection signal="gun_changed" from="GunController" to="Hotbar" method="_on_GunController_gun_changed"]
